# ellipse_detector

./: .gitignore  CMakeLists.txt  README.md  ed.cpp  edtest.py  ellipse_detector.cpp  gen2.py  headers.txt
code/: common.cpp  stdafx.h  tools.cpp
result/: result.txt
src/: CNEllipseDetector.cpp  CNEllipseDetector.h  common.cpp  common.h  edmodule.cpp  edmodule.hpp  tools.cpp  tools.h
